<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMeetingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/meetingRooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="700"
                android:fontFamily="sans-serif"
                android:contentDescription="@string/room_add_meeting_description"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="Jour de la reunion"
                android:textSize="32dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="700"
                android:fontFamily="sans-serif"
                android:contentDescription="@string/date_add_meeting_description"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="700"
                android:fontFamily="sans-serif"
                android:contentDescription="@string/timeToStart_add_meeting_description"
                android:hint="Debut de la reunion"
                android:textSize="32dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="700"
                android:fontFamily="sans-serif"
                android:contentDescription="@string/timeToEnd_add_meeting_description"
                android:hint="Fin de la reunion"
                android:textSize="32dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="700"
                android:fontFamily="sans-serif"
                android:hint="Sujet de la reunion"
                android:contentDescription="@string/subject_add_meeting_description"
                android:textSize="32dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meetingParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="700"
                android:fontFamily="sans-serif"
                android:contentDescription="@string/participants_add_meeting_description"
                android:hint="Participant à la reunion"
                android:textSize="32dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddMeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="Valider l'ajout d'une reunion"
                android:textSize="32dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textFontWeight="700"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/grey"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:contentDescription="@string/button_add_meeting_description"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>