<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/circle"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textFontWeight="700"
        android:fontFamily="sans-serif"
        android:contentDescription="@string/room_meeting_description"
        app:layout_constraintStart_toEndOf="@id/picture"
        app:layout_constraintTop_toTopOf="@id/picture"
        tools:text="Salle A" />

    <TextView
        android:id="@+id/timeToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textFontWeight="700"
        android:fontFamily="sans-serif"
        android:contentDescription="@string/timeToStart_meeting_description"
        app:layout_constraintStart_toEndOf="@id/room"
        app:layout_constraintTop_toTopOf="parent"
        tools:text=" - 10h30 - " />

    <TextView
        android:id="@+id/subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textFontWeight="700"
        android:fontFamily="sans-serif"
        android:contentDescription="@string/subject_meeting_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/timeToStart"
        app:layout_constraintTop_toTopOf="@id/timeToStart"
        tools:text="Sujet" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="316dp"
        android:layout_height="32dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textFontWeight="700"
        android:fontFamily="sans-serif"
        android:contentDescription="@string/participants_meeting_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/picture"
        app:layout_constraintTop_toBottomOf="@id/subject"
        tools:text="Adresse@mail.com" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textFontWeight="700"
        android:fontFamily="sans-serif"
        android:contentDescription="@string/date_meeting_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="14/08/2021" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="52dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:padding="8dp"
        android:contentDescription="@string/delete_meeting_button_description"
        android:src="@drawable/ic_delete_black_24dp"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintTop_toTopOf="@id/date" />


</androidx.constraintlayout.widget.ConstraintLayout>